--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -109,18 +109,6 @@
                         </div>
                         <div class="row divider-top">
                           <div class="col-sm-12">
-                            <fieldset class="form-group mb-0">
-                              <label class="form-label semibold" for="">Sistema de avaliação</label>
-                              <select class="select2" multiple="multiple">
-                                <option>Aproveitamento</option>
-                                <option>Notas</option>
-                                <option>Objetivo</option>
-                              </select>
-                            </fieldset>
-                          </div>
-                        </div>
-                        <div class="row divider-top">
-                          <div class="col-sm-12">
                             <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-search mr-xs"
                                                                                     aria-hidden="true"></i>
                               Buscar
@@ -260,21 +248,27 @@
                   </div>
                 </div>
                 <div class="row divider-top pb-md">
-                  <div class="col-sm-4">
+                  <div class="col-sm-3">
                     <label class="form-label semibold" for=""> Quatidade de Unidades <span
                             class="semibold text-danger h4">*</span></label>
                     <input type="number" class="form-control" id="" placeholder="00">
                   </div>
-                  <div class="col-sm-4">
+                  <div class="col-sm-3">
                     <div class="checkbox-toggle mt-lg">
                       <input type="checkbox" id="check-RepTest">
                       <label for="check-RepTest">Replacement test</label>
                     </div>
                   </div>
-                  <div class="col-sm-4">
+                  <div class="col-sm-3">
                     <div class="checkbox-toggle mt-lg">
                       <input type="checkbox" id="check-Certificado">
                       <label for="check-Certificado">Certificado</label>
+                    </div>
+                  </div>
+                  <div class="col-sm-3">
+                    <div class="checkbox-toggle mt-lg">
+                      <input type="checkbox" id="check-toggle-1"/>
+                      <label class="form-label" for="check-toggle-1">Livro a definir</label>
                     </div>
                   </div>
                 </div>
@@ -411,17 +405,13 @@
                 <label class="form-label semibold">Unidades</label>
                 <p>0000</p>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-6">
                 <label class="form-label semibold">Curso(s)</label>
                 <p>TEENS / Jovens e adultos</p>
               </div>
               <div class="col-md-2">
                 <label class="form-label semibold">Certificado</label>
                 <p>Sim</p>
-              </div>
-              <div class="col-md-2">
-                <label class="form-label semibold">Nota média</label>
-                <p class="text-warning"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Pendente</strong></p>
               </div>
               <div class="col-md-2">
                 <label class="form-label semibold">Situação</label>
